--- a/TranslationReg/Views/Documents/Details.cshtml
+++ b/TranslationReg/Views/Documents/Details.cshtml
@@ -4,20 +4,37 @@
     ViewBag.Title = "Данные документа";
 }
 
-<h2>Данные документа</h2>
+<h4>Данные документа</h4>
 
 <div>
-    <h4>@Model.Name</h4>
+    <h2>@Model.Name</h2>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            Создатель
+        </dt>
         <dd>
-            @Html.ActionLink("Скачать оргигинал","Download","Documents", new { @filepath=Model.OriginalFile.Path}, null)
+            @Html.Label(Model.Owner.Name)
         </dd>
 
+        <dt>
+            Скачать оргигинал
+        </dt>
         <dd>
-            @Html.ActionLink("Скачать перевод", "Download", "Documents", new { @filepath = Model.FinalFile.Path }, null)
+            <a href="@Url.Action("Download", "Documents", new { @filepath = Model.OriginalFile.Path })" class="glyphicon glyphicon-download"></a>
+        </dd>
+
+        <dt>
+            Скачать перевод
+        </dt>
+        <dd>
+            <a href="@Url.Action("Download", "Documents", new { @filepath = Model.FinalFile.Path })" class="glyphicon glyphicon-download"></a>
         </dd>
     </dl>
+    @if (Model.Stages != null && Model.Stages.Count!=0)
+    {
+        <h4>Стадии перевода документа</h4>
+    }
     @foreach (var stage in Model.Stages)
     {
         <table>
