--- a/TranslationReg/Views/Projects/Delete.cshtml
+++ b/TranslationReg/Views/Projects/Delete.cshtml
@@ -1,56 +1,50 @@
 ﻿@model TranslationRegistryModel.Project
-
-@{
-    ViewBag.Title = "Delete";
-}
-
-<h2>Удаление</h2>
-
-<h3>Вы уверены, что хотите удалить данную запись?</h3>
 <div>
-    <h4>Project</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.FinalLanguage.Name)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.FinalLanguage.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.OriginalLanguage.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.OriginalLanguage.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.WordsNumber)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.WordsNumber)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Удалить" class="btn btn-default" /> |
-            @Html.ActionLink("Назад к списку", "Index")
-        </div>
+    @{
+        ViewBag.Title = "Delete";
     }
+    <h3>Вы уверены, что хотите удалить данную запись?</h3>
+    <div>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                Название
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Name)
+            </dd>
+
+            <dt>
+                Язык оригинала
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.LanguagePair.OriginalLanguage.Name)
+            </dd>
+
+            <dt>
+                Язык перевода
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.LanguagePair.TranslationLanguage.Name)
+            </dd>
+
+            <dt>
+                Количество слов
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.WordsNumber)
+            </dd>
+
+        </dl>
+
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+
+            <div class="form-actions no-color">
+                <input type="submit" value="Удалить" class="btn btn-danger" />
+            </div>
+        }
+    </div>
 </div>
