--- a/TranslationReg/Views/Projects/Index.cshtml
+++ b/TranslationReg/Views/Projects/Index.cshtml
@@ -20,31 +20,43 @@
         </th>
 
         <th></th>
+        <th></th>
+        <th></th>
+        <th></th>
     </tr>
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
+    <tr>
+        <td>
+            <h3>
                 @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LanguagePair.Name)
-            </td>
+            </h3>
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.LanguagePair.Name)
+        </td>
 
-            <td>
-                @Html.ActionLink("Редактировать", "Edit", new { id = item.Id }, htmlAttributes: new { @class = "btn btn-primary" })
-                
-                <a href="/Projects/Details/@item.Id" class="btn btn-info"></a>
-                
-                <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#@item.Id"
-                   href="/Projects/Details/@item.Id" class="glyphicon glyphicon-chevron-down"></a>
+        <td>
+            @Html.ActionLink("Редактировать", "Edit", new { id = item.Id }, htmlAttributes: new { @class = "btn btn-primary" })
+        </td>
+        <td>
+            <a href="/Projects/Details/@item.Id" class="btn btn-info">Подробно</a>
+        </td>
+        <td>
+            <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#@item.Id"
+               href="/Projects/DetailsShort/@item.Id" class="glyphicon glyphicon-chevron-down detailsBtn"></a>
+        <td>
+            <a data-ajax="true"
+               href="/Projects/Delete/@item.Id" class="glyphicon glyphicon-remove deleteBtn"></a>
+        </td>
+    </tr>
+        
+    <tr>
+        <td id="@(item.Id)" class="dynamicBlock">
 
-                <a data-ajax="true"
-                   href="/Projects/Delete/@item.Id" class="glyphicon glyphicon-remove deleteBtn"></a>
-            </td>
-        </tr>
-        <tr id="@(item.Id)"></tr>
+        </td>
+    </tr>
     }
 
 </table>
@@ -71,6 +83,16 @@
             });
         });
 
+        $(document).ready(function () {
+            $(".detailsBtn").click(function () {
+                $(this).toggleClass("glyphicon-chevron-down");
+                $(this).toggleClass("glyphicon-chevron-up");
+                updatedBlock = $(this).attr("data-ajax-update");
+                // изначально display:none, описанов MyAppStyles.css
+                $(updatedBlock).toggle();
+            });
+        });
+        
         $(".deleteBtn").on("click", function (e) {
             e.preventDefault();
             $("<div></div>")
