--- a/TranslationReg/Content/MyAppStyles.css
+++ b/TranslationReg/Content/MyAppStyles.css
@@ -1,10 +1,52 @@
-﻿.glyphicon
-{
-    width : 100%;
-    font-size : 25px;
-    text-align:center;
+﻿.dynamicBlock{
+    display: none;
 }
 
-.dynamicBlock {
-    display:none
+.languageForm {
+    margin-top: 10px;
+    padding: 10px;
+}
+
+.languageTitles {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 5px;
+    
+}
+
+.languageTitles > div{
+    width: 33%;
+    text-align: center;
+    background-color: #d6d6d6;
+    height: 55px;
+    font-family: Arial, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    line-height: 55px;
+}
+
+.languageProp{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 5px;
+}
+
+.languageProp > div{
+    padding: 10px 0px;
+    width: 33%;
+    text-align: center;
+    height: 55px;
+    font-family: Arial, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+}
+
+.languageProp:hover{
+    background-color: #e8e8e8;
+}
+
+.Pair > .languageTitles .languageProp > div {
+    width: 25%;
 }
