--- a/TranslationReg/Views/LanguagePairs/Create.cshtml
+++ b/TranslationReg/Views/LanguagePairs/Create.cshtml
@@ -6,11 +6,11 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>LanguagePair</h4>
+        <h4>Языковая пара</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Name, "Наименование", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
@@ -18,7 +18,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.OriginalLanguageId, "OriginalLanguageId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.OriginalLanguageId, "Язык оригинала", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("OriginalLanguageId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.OriginalLanguageId, "", new { @class = "text-danger" })
@@ -26,7 +26,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TranslationLanguageId, "TranslationLanguageId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.TranslationLanguageId, "Язык перевода", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("TranslationLanguageId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.TranslationLanguageId, "", new { @class = "text-danger" })
