--- a/TranslationReg/Views/LanguagePairs/List.cshtml
+++ b/TranslationReg/Views/LanguagePairs/List.cshtml
@@ -3,47 +3,31 @@
 <h2>Языковые пары</h2>
 
 <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#addLanguagePairForm" 
-   href="/Languages/Create" class="glyphicon glyphicon-plus createBtn">
+   href="/LanguagePairs/Create" class="btn btn-primary createBtn" role="button">
+    Добавить языковую пару
 </a>
 <div id="addLanguagePairForm" class="dynamicBlock"></div>
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.Label("Язык оригинала")
-        </th>
-        <th>
-            @Html.Label("Язык перевода")
-        </th>
-        <th>
-            @Html.Label("Отображаемое наименование")
-        </th>
-        <th></th>
-    </tr>
-
+<div class="container languageForm Pair" id="languageEditor">
+    <div class="languageTitles">
+        <div>@Html.Label("Язык оригинала")</div>
+        <div>@Html.Label("Язык перевода")</div>
+        <div>@Html.Label("Наименование")</div>
+        <div>@Html.Label("Выполнить")</div>
+    </div>
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.OriginalLanguage.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TranslationLanguage.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#languagePair@(item.Id)" href="/LanguagePairs/Edit/@item.Id" class="glyphicon glyphicon-edit editBtn"></a>
-                <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#languagePair@(item.Id)" href="/LanguagePairs/Delete/@item.Id" class="glyphicon glyphicon-remove deleteBtn"></a>
-            </td>
-        </tr>
-        <tr>
-            <td id="languagePair@(item.Id)" class="dynamicBlock"></td>
-        </tr>
-
-        @*
-        @Html.Partial("../LanguagePairs/Item", item)
-        *@
+        <div class="languageProp">
+            <div>@Html.DisplayFor(modelItem => item.OriginalLanguage.Name)</div>
+            <div>@Html.DisplayFor(modelItem => item.TranslationLanguage.Name)</div>
+            <div>@Html.DisplayFor(modelItem => item.Name)</div>
+            <div>
+                <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#languagePair@(item.Id)" href="/LanguagePairs/Edit/@item.Id" class="btn btn-primary langEditBtn editBtn">Редактировать</a>
+                <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#languagePair@(item.Id)" href="/LanguagePairs/Edit/@item.Id"
+                   class="btn btn-danger deleteBtn">Удалить</a>
+            </div>
+        </div>
+        <div id="languagePair@(item.Id)" class="dynamicBlock"></div>
     }
-</table>
+</div>
+
