--- a/TranslationReg/Views/Languages/Item.cshtml
+++ b/TranslationReg/Views/Languages/Item.cshtml
@@ -8,7 +8,7 @@
     </td>
     <td>
         <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#language@(Model.Id)" href="/Languages/Edit/@Model.Id"
-           class="glyphicon glyphicon-edit langEditBtn editBtn"></a>
+           class="glyphicon glyphicon-edit editBtn"></a>
         <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#language@(Model.Id)" href="/Languages/Delete/@Model.Id"
            class="glyphicon glyphicon-remove deleteBtn"></a>
     </td>
