--- a/TranslationReg/Views/Home/About.cshtml
+++ b/TranslationReg/Views/Home/About.cshtml
@@ -1,7 +1,6 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "О программе";
 }
-<h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Данный сайт преназначен для учета переводов документов</p>
