--- a/TranslationReg/Views/Languages/Edit.cshtml
+++ b/TranslationReg/Views/Languages/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="dialogForm">
+﻿<div class="formContainer">
     @model TranslationRegistryModel.Language
 
     @using (Html.BeginForm())
@@ -6,12 +6,11 @@
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.Id)
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Name, "Язык", htmlAttributes: new { @class = "control-label col-md-5" })
+                @Html.LabelFor(model => model.Name, "Наименование", htmlAttributes: new { @class = "control-label col-md-5" })
                 <div class="col-md-7">
                     @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
@@ -33,4 +32,5 @@
             </div>
         </div>
     }
+    <hr />
 </div>
