--- a/TranslationReg/Views/Projects/DetailsShort.cshtml
+++ b/TranslationReg/Views/Projects/DetailsShort.cshtml
@@ -1,8 +1,7 @@
-﻿<div style="margin-bottom:50px">
-    @model TranslationRegistryModel.Project
-    <h4>Детали проекта</h4>
+﻿@model TranslationRegistryModel.Project
+
+<div class="formContainer">
     <div>
-        <hr />
         <dl class="dl-horizontal">
 
             <dt>
@@ -39,4 +38,5 @@
 
         </dl>
     </div>
+    <hr />
 </div>
