--- a/TranslationReg/Views/Projects/Index.cshtml
+++ b/TranslationReg/Views/Projects/Index.cshtml
@@ -7,7 +7,7 @@
    href="/Projects/Create" class="btn btn-success createBtn">Добавить</a>
 <div id="addProj" class="dynamicBlock"></div>
 
-<div class="container languageForm Pair" id="languageEditor">
+<div class="container myForm Pair" id="languageEditor">
     <div class="languageTitles">
         <div>@Html.Label("Название")</div>
         <div>@Html.Label("Языковая пара")</div>
