--- a/TranslationReg/Content/MyAppStyles.css
+++ b/TranslationReg/Content/MyAppStyles.css
@@ -12,10 +12,54 @@
     margin-bottom: 20px;
 }
 
-.languageForm {
+.myForm {
     margin-top: 10px;
     padding: 10px;
 }
+
+.myTitles {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 5px;
+}
+.myTitles > div {
+    text-align: center;
+    background-color: #d6d6d6;
+    height: 55px;
+    font-family: Arial, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    line-height: 55px;
+}
+
+.myProp {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 5px;
+}
+.myProp > div {
+    padding: 10px 0px;
+    text-align: center;
+    height: 55px;
+    font-family: Arial, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+}
+.myProp:hover {
+    background-color: #e8e8e8;
+}
+
+
+
+
+
+
+
+
+
+
 
 .languageTitles {
     display: flex;
@@ -23,7 +67,6 @@
     justify-content: space-between;
     width: 100%;
     margin-bottom: 5px;
-    
 }
 
 .languageTitles > div{
@@ -55,8 +98,4 @@
 
 .languageProp:hover{
     background-color: #e8e8e8;
-}
-
-.Pair > .languageTitles .languageProp > div {
-    width: 25%;
 }
