--- a/TranslationReg/Views/Shared/_Layout.cshtml
+++ b/TranslationReg/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year – приложение ASP.NET</p>
+            <p>&copy; @DateTime.Now.Year – НИИ ТПУ</p>
         </footer>
     </div>
 
