--- a/TranslationReg/Views/DocStages/Delete.cshtml
+++ b/TranslationReg/Views/DocStages/Delete.cshtml
@@ -1,21 +1,8 @@
 ﻿@model TranslationRegistryModel.DocStage
 
-@{
-    Layout = null;
-}
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Delete</title>
-</head>
-<body>
-    <h3>Are you sure you want to delete this?</h3>
+<div>
+    <h3>Вы уверены что хотите удалить данную запись?</h3>
     <div>
-        <h4>DocStage</h4>
-        <hr />
         <dl class="dl-horizontal">
             <dt>
                 @Html.DisplayNameFor(model => model.DocFile.Path)
@@ -52,5 +39,4 @@
             </div>
         }
     </div>
-</body>
-</html>
+</div>
