--- a/TranslationReg/Views/Languages/List.cshtml
+++ b/TranslationReg/Views/Languages/List.cshtml
@@ -15,7 +15,7 @@
         </div>
         @foreach (var item in Model)
         {
-            <div class="languageProp">
+            <div class="myProp">
                 <div class="col-md-4">@Html.DisplayFor(modelItem => item.Name)</div>
                 <div class="col-md-4">@Html.DisplayFor(modelItem => item.ShortName)</div>
                 <div class="col-md-4">
