--- a/TranslationReg/Views/Projects/Details.cshtml
+++ b/TranslationReg/Views/Projects/Details.cshtml
@@ -6,6 +6,7 @@
 
         @Html.Partial("DetailsShort", Model)
 
+
         <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#addDocForm"
            href="/Documents/Create" class="btn btn-success createBtn">Добавить документ</a>
         <div id="addDocForm" class="dynamicBlock"></div>
@@ -18,48 +19,29 @@
 
             @foreach (var doc in Model.Documents)
             {
-            <div class="row">
-                <div class="col-md-6"><h3>@Html.DisplayFor(modelItem => doc.Name)</h3></div>
-                <div class="col-md-6">
-                    <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#addDocStageForm@(doc.Id)"
-                       href="/DocStages/Create/@doc.Id" class="btn btn-success createBtn">Добавить стадию</a>
-
-                    @Html.ActionLink("Скачать", "Download", "Documents", new { @filepath = doc.OriginalFile.Path }, htmlAttributes: new { @class = "btn btn-success" })
-                    <a class="btn btn-primary" href="/Documents/Edit/1">Редактировать</a>
-                    <a class="btn btn-info" href="/Documents/Details/1">Подробно</a>
-                    <a class="btn btn-danger" href="/Documents/Delete/1">Удалить</a>
-                </div>
-                <div id="addDocStageForm@(doc.Id)" class="dynamicBlock"></div>
-            </div>
                 <div>
-                    @foreach (var stage in doc.Stages)
-                    {
-                        <div class="container myForm Pair">
-                            <div>
-                                <b>@stage.WorkType.Name</b>
-                            </div>
+                    <div class="row">
+                        <div class="col-md-6"><h3>@Html.DisplayFor(modelItem => doc.Name)</h3></div>
+                        <div class="col-md-6">
 
-                            @if (stage.User_Stage != null && stage.User_Stage.Count != 0)
-                            {
-                                <div class="myTitles">
-                                    <div class="col-md-3">Пользователь</div>
-                                    <div class="col-md-3">Количество (слов)?</div>
-                                    <div class="col-md-3">Дата загрузки</div>
-                                    <div class="col-md-3">Ссылка</div>
-                                </div>
-                            }
+                            <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#addDocStageForm@(doc.Id)"
+                               href="/DocStages/Create/@doc.Id" class="btn btn-success createBtn">Добавить стадию</a>
 
-                            @foreach (var userStage in stage.User_Stage)
-                            {
-                                <div class="myProp">
-                                    <div class="col-md-3">@Html.DisplayFor(modelItem => userStage.User.Name)</div>
-                                    <div class="col-md-3">@Html.DisplayFor(modelItem => userStage.Amount)</div>
-                                    <div class="col-md-3">@Html.DisplayFor(modelItem => userStage.DocFile.Date)</div>
-                                    <div class="col-md-3">@Html.ActionLink("Скачать", "Download", "Documents", new { @filepath = userStage.DocFile.Path }, htmlAttributes: new { @class = "btn btn-success" })</div>
-                                </div>
-                            }
+                            @Html.ActionLink("Скачать", "Download", "Documents", new { @filepath = doc.OriginalFile.Path }, htmlAttributes: new { @class = "btn btn-success" })
+                            <a class="btn btn-primary" href="/Documents/Edit/@doc.Id">Редактировать</a>
+                            <a class="btn btn-info" href="/Documents/Details/@doc.Id">Подробно</a>
+                            <a class="btn btn-danger deleteBtn" href="/Documents/Delete/@doc.Id">Удалить</a>
+
                         </div>
-                    }
+                        <div id="addDocStageForm@(doc.Id)" class="dynamicBlock"></div>
+                    </div>
+
+                    <div>
+                        @foreach (var stage in doc.Stages)
+                        {
+                        @Html.Partial("../DocStages/Item", stage)
+                        }
+                    </div>
                 </div>
             }
         </div>
